View Issue Details

IDProjectCategoryView StatusLast Update
0023040Open CASCADEOCCT:Foundation Classespublic2012-11-16 13:16
Reporterkgv Assigned Tokgv  
PrioritylowSeveritytrivial 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.2 
Target Version6.5.4Fixed in Version6.5.4 
Summary0023040: Annoying warnings in NCollection_Vector
DescriptionCompiler notify about wrong initialization order of class members in constructors:
> NCollection_BaseVector.hxx: In constructor
> 'NCollection_BaseVector::MemBlock::MemBlock(NCollection_BaseAllocator*)':
> 'NCollection_BaseVector::MemBlock::myAlloc' will be initialized after
> 'Standard_Integer NCollection_BaseVector::MemBlock::myFirstInd'

This is regression after #22143
This is suggested either to fix constructors or members order in class definition.
TagsNo tags attached.
Test case numberNot needed

Activities

abv

2012-05-04 12:50

manager   ~0020472

I suppose the problem could be reproduced with GCC compiler...

kgv

2012-06-09 08:40

developer   ~0020679

Dear abv, please review the patch in branch CR23040.

abv

2012-06-09 08:45

manager   ~0020680

No remarks, please test

mkv

2012-06-14 11:30

tester   ~0020691

Dear BugMaster,
The workbenches
KAS:dev:mkv-23040-occt (GIT branch CR23040)
KAS:dev:mkv-23040-products (GIT master)
were compiled on Linux platform and tested.
There are not warnings in NCollection_BaseVector during compilation on Linux.

Regression:
Not detected

Improvements:
Not detected

Testing case:
Not needed

See results in /QADisk/occttests/results/KAS/dev/mkv-23040-products_13062012/lin
See reference results in /QADisk/occttests/results/KAS/dev/products-20120601-opt_02062012/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

Related Changesets

occt: master 50a0744c

2012-06-09 04:38:40

kgv

Details Diff
0023040: Annoying warnings in NCollection_Vector

Fixed initialization order of class members in constructors
Affected Issues
0023040
mod - src/IntPatch/IntPatch_Point.lxx Diff File
mod - src/NCollection/NCollection_BaseVector.hxx Diff File

Issue History

Date Modified Username Field Change
2012-03-28 10:02 kgv New Issue
2012-03-28 10:02 kgv Assigned To => abv
2012-05-04 12:50 abv Note Added: 0020472
2012-05-04 12:50 abv Assigned To abv => dbv
2012-05-04 12:50 abv Status new => assigned
2012-06-09 08:40 kgv Note Added: 0020679
2012-06-09 08:40 kgv Assigned To dbv => abv
2012-06-09 08:40 kgv Status assigned => resolved
2012-06-09 08:45 abv Note Added: 0020680
2012-06-09 08:45 abv Assigned To abv => bugmaster
2012-06-09 08:45 abv Status resolved => reviewed
2012-06-13 15:55 mkv Assigned To bugmaster => mkv
2012-06-14 11:30 mkv Note Added: 0020691
2012-06-14 11:31 mkv Test case number => Not needed
2012-06-14 11:31 mkv Assigned To mkv => bugmaster
2012-06-14 11:31 mkv Status reviewed => tested
2012-06-18 12:25 kgv Changeset attached => occt master 50a0744c
2012-06-18 12:25 kgv Assigned To bugmaster => kgv
2012-06-18 12:25 kgv Status tested => verified
2012-06-18 12:25 kgv Resolution open => fixed
2012-07-10 16:56 bugmaster Target Version => 6.5.4
2012-11-16 13:15 bugmaster Fixed in Version => 6.5.4
2012-11-16 13:16 bugmaster Status verified => closed