0023040: Annoying warnings in NCollection_Vector

Fixed initialization order of class members in constructors